# money-zen

./: .gitignore  ARCHITECTURE.md  CONTEXT.md  PHASE5-PLANNING.md  README.md  README_PROJECT.md  TESTING-CHECKLIST.md  TODO.md  auto-commit.sh  backup.sh  category-groups.json  index.html  migrate-categories.ts  nomad-categories.json  package.json  pnpm-lock.yaml  tailwind.config.js  temp_replace.txt  tsconfig.json  vite.config.ts
.claude/: settings.local.json
database-backups/: money-zen-backup-20251008-124959.db
docs/: ARCHITECTURE.md  ARCHITECTURE.md.backup-phase3  ARCHITECTURE.md.backup-phase4  COMMANDS.md  DAILY_LOG.md  MIGRATION-PLAN.md  PROJECT-STATUS-MASTER.md  SONNET-INSTRUCTIONS.md  STATUS.md  TODO.md  TODO.md.backup-phase3
docs/archive/: MASTER_PLAN.md  PROJECT-STATUS-MASTER.md
migration-backups/: money-zen-backup-20251007-104650.db
release/: README.txt
src/: App.svelte  App.svelte.backup  DatabaseTest.svelte  DatabaseTest.svelte.backup  app.css
src-tauri/: Cargo.toml  add_owner_column.sql  build.rs  cleanup.sql  insert_nomad_accounts.sql  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: database.rs  database.rs.backup-all-unwraps  database.rs.backup-before-deprecation-fix  database.rs.backup-messy  lib.rs.DISABLED  main.rs  main.rs.backup-auto-migration  main.rs.backup-before-migration  migrate_categories.rs
src/core/entities/: Account.ts  Category.ts  Tag.ts  Transaction.ts  index.ts
src/core/repositories/: AccountRepository.ts  CategoryRepository.ts  TagRepository.ts  TransactionRepository.ts
src/core/services/: PDFParserService.ts
src/lib/: Accounts.svelte.backup  Analytics.svelte  Analytics.svelte.backup  Categories.svelte  Categories.svelte.backup-before-form  Dashboard.svelte  Import.svelte.backup  Tags.svelte.backup  Transactions.svelte  Transactions.svelte.backup  database.ts  types.ts  utils.ts
src/lib/api/: tauriApi.ts
(+45 files in other folders)
